# LibWres

./: CMakeLists.txt  README.md  install.sh
cmake/: Config.cmake.in
common/: CMakeLists.txt  common.h  error.cpp  intutil.cpp  io-utils.cpp  llist.cpp  strbuf.cpp  string-utils.cpp  string-utils.h  win32-endian.cpp
test/: CMakeLists.txt  main.cpp
test/pe/: aero11_seven.msstyles
wres/: CMakeLists.txt  macros.h  winlibrary.cpp  winlibrary.h  winresource.cpp  winresource.h  wresutil.cpp  wresutil.h
